[gd_scene load_steps=9 format=3 uid="uid://nq1d26xo8s85"]

[ext_resource type="Texture2D" uid="uid://0006pj43wfvc" path="res://assets/kenney_pixel-shmup/Ships/ship_0011.png" id="1_e1a8e"]
[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_qleaf"]

[sub_resource type="Gradient" id="Gradient_ck2sm"]
colors = PackedColorArray(1, 1, 1, 0.411765, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_y7qbu"]
gradient = SubResource("Gradient_ck2sm")
width = 16

[sub_resource type="Curve" id="Curve_y1dbg"]
max_value = 3.0
_data = [Vector2(0, 2.03636), 0.0, 0.0, 0, 0, Vector2(1, 0.681818), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_7gvq4"]
width = 32
curve = SubResource("Curve_y1dbg")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_tqwmh"]
particle_flag_disable_z = true
direction = Vector3(0, 1, 0)
spread = 0.0
initial_velocity_min = 94.74
initial_velocity_max = 94.74
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_curve = SubResource("CurveTexture_7gvq4")
color_ramp = SubResource("GradientTexture1D_y7qbu")

[sub_resource type="CircleShape2D" id="CircleShape2D_dtlpc"]
radius = 13.0384

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 4
motion_mode = 1
script = ExtResource("1_qleaf")

[node name="ShadowHolder" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Shadow" type="Sprite2D" parent="ShadowHolder"]
unique_name_in_owner = true
self_modulate = Color(0, 0, 0, 0.380392)
position = Vector2(-16, 18)
scale = Vector2(0.8, 0.8)
texture = ExtResource("1_e1a8e")

[node name="AirStream" type="GPUParticles2D" parent="."]
position = Vector2(-13, 3)
amount = 12
process_material = SubResource("ParticleProcessMaterial_tqwmh")
lifetime = 0.2
trail_enabled = true
trail_sections = 3
trail_section_subdivisions = 2

[node name="AirStream2" type="GPUParticles2D" parent="."]
position = Vector2(13, 3)
amount = 12
process_material = SubResource("ParticleProcessMaterial_tqwmh")
lifetime = 0.2
trail_enabled = true
trail_sections = 3
trail_section_subdivisions = 2

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_e1a8e")

[node name="Gun" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(-7, -8)

[node name="Gun2" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(7, -8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_dtlpc")

[node name="FireTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.5

[connection signal="timeout" from="FireTimer" to="." method="_fire_bullets"]
